force-app/main/default/objects/Property__c/fields/Building_Manager__c.field-meta.xml
<CustomField>
    <fullName>Building_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact for building management, maintenance requests, and day-to-day property operations. Essential for facilities teams to quickly reach the right person for building issues.</description>
    <label>Building Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>