force-app/main/default/objects/Property__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <description>The latitude and longitude of the leased property.</description>
    <inlineHelpText>The latitude and longitude of the leased property.</inlineHelpText>
    <label>Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>