force-app/main/default/objects/Property__c/fields/Lessor__c.field-meta.xml
<CustomField>
    <fullName>Lessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Property owner who enters into a lease agreement with a tenant, also known as the lessee. This agreement grants the lessee the right to use the property for a specified period in exchange for rent payments.</description>
    <inlineHelpText>Property owner who enters into a lease agreement with a tenant, also known as the lessee. This agreement grants the lessee the right to use the property for a specified period in exchange for rent payments.</inlineHelpText>
    <label>Lessor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>