force-app/main/default/objects/Property__c/fields/Parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>Parking_Spaces__c</fullName>
    <description>Total number of parking spaces available at the property. Critical for employee planning and lease negotiations, especially in urban locations where parking is limited.</description>
    <label>Parking Spaces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>