force-app/main/default/objects/Property__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>The street address of the leased property.</description>
    <inlineHelpText>The street address of the leased property.</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>