force-app/main/default/objects/Property__c/fields/Total_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Total_Square_Footage__c</fullName>
    <description>Total rentable square footage of the entire building or property. Used to calculate space utilization ratios and compare property sizes across the portfolio.</description>
    <label>Total Square Footage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>