force-app/main/default/objects/Property__c/fields/Year_Built__c.field-meta.xml
<CustomField>
    <fullName>Year_Built__c</fullName>
    <description>Year the building was originally constructed. Important for understanding building systems age, potential maintenance requirements, and compliance with modern building codes.</description>
    <label>Year Built</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>