force-app/main/default/objects/Property__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>The Zip or postal code in which the leased property is located.</description>
    <inlineHelpText>The Zip or postal code in which the leased property is located.</inlineHelpText>
    <label>Zip Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>