force-app/main/default/objects/Property__c/listViews/All_Properties.listView-meta.xml
<ListView>
    <fullName>All_Properties</fullName>
    <columns>NAME</columns>
    <columns>Property_Type__c</columns>
    <columns>Total_Square_Footage__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Lessor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Properties</label>
</ListView>